PORTAL-1506: change z-index on selector popup, remove stopPropagation while closing quick view

--- a/skin/classic/src/main/sass/_common.scss
+++ b/skin/classic/src/main/sass/_common.scss
@@ -5162,7 +5162,7 @@ table {
   position: absolute;
   display: block;
   float: left;
-  z-index: 160;
+  z-index: 1000;
 
   .dropdown-menu {
     position: relative;
